alteracao de nome de diretorio

--- a/20-programacao-funcional-expressoes-lambda/ex05-resolvido-consumer-exemploCom-forEach/.project
+++ b/20-programacao-funcional-expressoes-lambda/ex05-resolvido-consumer-exemploCom-forEach/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ex05-resolvido-consumer</name>
+	<name>ex05-resolvido-consumer-exemploCom-forEach</name>
 	<comment></comment>
 	<projects>
 	</projects>
